Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34588

androiddeployqt: failed to create release apk when run androiddeployqt with "--verbose"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0 RC1
    • 5.2.0 Beta1
    • QPA
    • None
    • Fedora 16
    • Android
    • 6ca1df22ef42ffbb86133313b86f9027c5f9de90

    Description

      Run androiddeployqt from command line with next parameter

      --output $dist_dir/android --input ./android_config.json --install --verbose --sign /path/to/my/keystore.keystore alias --storepass password
      

      error:

      sh: /opt/android/adt-bundle-linux-x86-20130522/sdk/tools/zipalign -v: No such file or directory
      

      but zipalign exists in this pass

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            dteteruk Dmytro Teteruk
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes