androiddeployqt: Fix signing package with -verbose

We would put the "-v" option inside the quotes in the zipalign
command, causing the shell to look for the executable named
"zipalign -v".

Task-number: QTBUG-34588
Change-Id: I88269cada9d77c3ddcceb6133f9bc8cf275c425a
Reviewed-by: Paul Olav Tvete <paul.tvete@digia.com>